<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZenLead</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="scan_tips">Put the barcode picture into the frame Automatically scan</string>
    
    <string name="action_search">Search</string>
    <string name="action_new">New Scan Task</string>
    <string name="title_activity_new_task">Create New Scan Task</string>
    <string name="task_name">Task Name : </string>
    <string name="task_name_hint">Input Task Name Here</string>
    <string name="task_time">Create Time :</string>
    <string name="start_task">Start Task</string>
    <string name="title_activity_task_detail">New Task Detail</string>
    <string name="total_packages">Total Packages: </string>
    <string name="save_task">Save Task</string>
    <string name="search_hint">Order Number/Tracking Number</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
	<string name="shipping_method">Shipping Method:</string>
	
	<string name="bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="undo">撤消</string>
    <string name="finish">完成</string>
        
    <string name="txtPackage">Package</string>
    <string name="getTrackingNo">Scan Tracking</string>
    <string name="getOrderNo">Scan Order</string>
    <string name="wrong">Wrong</string>
    <string name="ignoreRepeat">Ignore Repeat</string>
    
    <string name="trackingNumber">   Tracking Number</string>
    <string name="orderNumber">   Order Number</string>
    <string name="nofound">  No Found</string>
    
    <string name="namerequired">Task name required!</string>

</resources>
