<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SaveTaskDetailActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/txtTaskName"
                android:layout_height="wrap_content"
                android:text="@string/task_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbTaskName"
                android:layout_height="wrap_content"
                android:layout_marginLeft = "5dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             >

            <TextView
                android:id="@+id/txtTaskTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_time"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbCreateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft = "5dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             >

            <TextView
                android:id="@+id/txtTaskCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_packages"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbTotalPackage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft = "5dp"
                android:text="" />
        </TableRow>
        

        
    </TableLayout>

    <ListView
        android:id="@+id/taskDetailList"
        android:layout_width="match_parent"
        android:layout_height="315dp"
        android:layout_marginTop="10dp"
        android:text="" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/save_task"
        android:onClick="btnStartTask"
        android:width="180dp" />

</LinearLayout>