<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/capture_containter"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <SurfaceView
        android:id="@+id/capture_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/top_mask"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/scan_mask"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:id="@+id/capture_crop_layout"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_below="@id/top_mask"
        android:layout_centerHorizontal="true"
        android:background="@drawable/capture"
        android:contentDescription="@string/app_name" >

        <ImageView
            android:id="@+id/capture_scan_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:background="@drawable/scan_line"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/bottom_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/capture_crop_layout"
        android:background="@drawable/scan_mask"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:id="@+id/left_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_mask"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/top_mask"
        android:layout_toLeftOf="@id/capture_crop_layout"
        android:background="@drawable/scan_mask"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:id="@+id/right_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_mask"
        android:layout_alignParentRight="true"
        android:layout_below="@id/top_mask"
        android:layout_toRightOf="@id/capture_crop_layout"
        android:background="@drawable/scan_mask"
        android:contentDescription="@string/app_name" />

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dip"
        android:layout_alignParentTop="true"
        android:background="@color/capture_text_cover_bg"
        android:orientation="horizontal"
        android:weightSum="5.0" >

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/capture_flashlight"
                android:layout_width="30.0dip"
                android:layout_height="30.0dip"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:scaleType="fitCenter"
                android:src="@drawable/scan_flashlight" />
        </LinearLayout>

        <TextView
            android:id="@+id/capture_top_hint"
            android:layout_width="0.0dip"
            android:layout_height="85.0dip"
            android:layout_gravity="top|center"
            android:layout_weight="3.0"
            android:gravity="center"
            android:paddingLeft="20.0dip"
            android:text="@string/top_hint"
            android:textColor="#ffffffff"
            android:textSize="13.0sp" />

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/capture_scan_photo"
                android:layout_width="30.0dip"
                android:layout_height="30.0dip"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:scaleType="fitCenter"
                android:src="@drawable/scan_photo" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/capture_crop_layout"
        android:orientation="vertical" >

       <LinearLayout
            android:id="@+id/bottom_confirm"
            android:layout_width="match_parent"
            android:layout_height="95dip"
            android:layout_alignParentBottom="true"
            android:background="@color/capture_text_cover_bg"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/capture_button_finish"
                android:layout_width="70.0dip"
                android:layout_height="40.0dip"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20.0dip"
                android:text="@string/finish"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/capture_bottom_hint"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:paddingLeft="20.0dip"
                android:paddingRight="20.0dip"
                android:text="@string/bottom_hint"
                android:textColor="#ffffffff"
                android:textSize="13.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
            android:orientation="vertical"
            android:layout_above="@id/bottom_confirm">

            <ListView
                android:id="@+id/taskDetailList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stackFromBottom="true"
				android:transcriptMode="alwaysScroll"                
                android:text="" />
        </LinearLayout>
        
        
    </RelativeLayout>

</RelativeLayout>